# ai-forge

./: CHANGELOG.md  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: forge-invariants.yaml  forge.toml  policies.toml  providers.toml
docs/: acceptance.md  configuration.md  installation.md  operations.md  troubleshooting.md
docs/001 - specs/: README.md  cahier-des-charges-ai-forge-v1_4.md.md  planning.json  planning.md
docs/specs/: MIGRATION-IMPL.md  README.md  cahier-des-charges-ai-forge-v1_4.md.md  planning.json  planning.md
examples/demo-bl/: BL-demo-001.md
examples/target-project/: cdc.md  verify.py
forge/: __init__.py
forge/budget/: __init__.py
forge/context/: __init__.py
forge/contracts/: __init__.py
forge/core/: __init__.py  models.py  specparser.py
forge/ghub/: cli.py
forge/obs/: __init__.py
forge/policy/: __init__.py
forge/prompts_registry/: __init__.py
forge/providers/: __init__.py  base.py  registry.py  runner.py
forge/roles/: __init__.py
forge/state/: __init__.py
forge/workspace/: __init__.py
prompts/: arch_review.md.j2  architect.md.j2  dev.md.j2  dev_conflict.md.j2  reviewer.md.j2  spec_bl.md.j2  spec_feat.md.j2  spec_review.md.j2  spec_uc.md.j2  tester.md.j2
prompts/audit/: report.md.j2
prompts/partials/: escalation.j2  issue_correction.j2  verdict_format.j2
src/: __init__.py  cli.py
src/adr/: __init__.py  adr_writer.py
src/budget/: budget_tracker.py  run_budget.py  stop_loss.py
src/context/: context_manifest.py  truncation.py
src/contracts/: __init__.py  audit_report.py  escalation_report.py
src/core/: __init__.py  invariants_loader.py  specparser.py
src/gates/: __init__.py  auto.py  ci_classification.py  ci_watcher.py  diffguard.py  doc_gates.py  docstring_checker.py  extended_quality.py  invariant_checks.py
src/ghub/: __init__.py  cli.py  repos.py
src/obs/: invocation_journal.py  logging.py  report.py  report_builder.py  stats.py  status.py  status_view.py
src/phases/: __init__.py  architect.py  audit.py  bootstrap_repos.py  close_spec.py  doctor.py  escalation.py  execute.py  release.py  spec_review_loop_result.py  specify.py  specify_request.py  specify_result.py  validate_specs.py
src/planner/: __init__.py  dag.py  graph_updates.py  milestones.py  publish.py  waves.py
src/policy/: approval_queue.py  attribution_scrubber.py  github_perimeter.py  role_policy.py  (+5 more)
templates/: architecture.md.j2  lib_cdc.md.j2  milestones.md.j2  report.md.j2
tests/: conftest.py  test_ci_red.py
(+428 files in other folders)
