[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ai-forge"
version = "1.1.0"
description = "Autonomous CLI-driven software development orchestrator."
readme = "docs/specs/README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "Forge maintainers" },
]
dependencies = [
  "aiosqlite>=0.22.1",
  "jinja2>=3.1.6",
  "networkx>=3.6.1",
  "pydantic>=2.12.0",
  "python-frontmatter>=1.3.0",
  "rich>=15.0.0",
  "typer>=0.26.8",
]

[project.scripts]
forge = "src.cli:main"

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "black>=25.1.0",
  "mypy>=1.17.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.2",
  "types-networkx>=3.6.1.20260624",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "SIM", "UP", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"
asyncio_mode = "auto"
testpaths = ["src", "tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_empty = true
